responsive en proceso, cambio de equipo

--- a/pages/home.html
+++ b/pages/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <title>Home</title>
 </head>
 
@@ -17,6 +18,7 @@
             </p>
         </div>
         <nav class="navbar container">
+            <iconify-icon class="navbar__toggle" icon="fa6-solid:bars" style="color: white;"></iconify-icon>
             <ul class="navbar__menu">
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Inicio</a>
                     <ul class="submenu">
