Footer finalizado por el momento

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta http-equiv="refresh" content="0;url=pages/home.html">
     <title>Asociación Gremial de Profesionales y Personal Superior de Vialidad Nacional</title>
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="shortcut icon" href="./img/logoasociacion.ico" type="image/x-icon">
 </head>
 
 <body>
