--- a/pages/home.html
+++ b/pages/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <link rel="shortcut icon" href="../img/logoasociacion.ico" type="image/x-icon">
     <title>Home</title>
 </head>
 
@@ -97,6 +98,37 @@
 
     </header>
     <script src="../js/menu.js"></script>
+    <section class="principal">
+
+    </section>
+    <footer>
+        <section class="footer__redes container">
+            <ul class="redes__lista">
+                <li class="redes__item"><a href="https://instagram.com/profesionalesdnv?igshid=OGQ5ZDc2ODk2ZA==" class="redes__link" target="_blank"><iconify-icon icon="skill-icons:instagram"></iconify-icon></a></li>
+                <li class="redes__item"><a href="https://api.whatsapp.com/send/?phone=3512531787" class="redes__link" target="_blank"><iconify-icon icon="logos:whatsapp-icon"></iconify-icon></a></li>
+                <li class="redes__item"><a href="mailto:info@profesionalesdnv.org.ar" class="redes__link" title="info@profesionalesdnv.org.ar"><iconify-icon icon="clarity:email-solid" style="color: #f86900;"></iconify-icon></a></li>
+            </ul>
+        </section>
+        <section class="footer__info container">
+            <ul class="footer_lista">
+                <li class="footer_item"></li>
+                <li class="footer_item"></li>
+                <li class="footer_item"></li>
+                <li class="footer_item"></li>
+                <li class="footer_item"></li>
+                <li class="footer_item"></li>
+                <li class="footer_item"></li>
+                <li class="footer_item"></li>
+                <li class="footer_item"></li>
+                <li class="footer_item"></li>
+                <li class="footer_item"></li>
+                <li class="footer_item"></li>
+            </ul>
+        </section>
+        <p class="footer__line container"></p>
+        <p class="footer__info container">Chacabuco 194 - 2° Piso A - C.A.B.A. - <iconify-icon icon="mingcute:phone-fill"></iconify-icon> 011 - 43343779</p>
+        <p class="footer__info container">Todos los derechos reservados &copy; Profesionales DNV 2023 </p>
+    </footer>
 </body>
 
 </html>
