agregación de ícono flotante de wsp

--- a/pages/home.html
+++ b/pages/home.html
@@ -129,6 +129,7 @@
         <p class="footer__info container">Chacabuco 194 - 2° Piso A - C.A.B.A. - <iconify-icon icon="mingcute:phone-fill"></iconify-icon> 011 - 43343779</p>
         <p class="footer__info container">Todos los derechos reservados &copy; Profesionales DNV 2023 </p>
     </footer>
+    <a href="https://api.whatsapp.com/send/?phone=3512531787" class="wsp_float" target="_blank"><iconify-icon icon="logos:whatsapp-icon"></iconify-icon></a>
 </body>
 
 </html>
