--- a/pages/institucional.html
+++ b/pages/institucional.html
@@ -48,10 +48,10 @@
                 <li class="aside_item"><a class="aside_link" href="#aside_item2"><iconify-icon class="aside_icon"
                             icon="uil:arrow-circle-right" style="color: #f86900;"></iconify-icon>Nuestros Objetivos</a>
                 </li>
-                <li class="aside_item"><a class="aside_link" href=""><iconify-icon class="aside_icon"
+                <li class="aside_item"><a class="aside_link" href="#aside_item3"><iconify-icon class="aside_icon"
                             icon="uil:arrow-circle-right" style="color: #f86900;"></iconify-icon>¿Cómo funcionamos?</a>
                 </li>
-                <li class="aside_item"><a class="aside_link" href=""><iconify-icon class="aside_icon"
+                <li class="aside_item"><a class="aside_link" href="#aside_item4"><iconify-icon class="aside_icon"
                             icon="uil:arrow-circle-right" style="color: #f86900;"></iconify-icon>Nuestra Sede</a></li>
                 <li class="aside_item"><a class="aside_link" href=""><iconify-icon class="aside_icon"
                             icon="uil:arrow-circle-right" style="color: #f86900;"></iconify-icon>¿Por qué afiliarse?</a>
@@ -65,30 +65,29 @@
                         afiliados</a></li>
             </ul>
         </aside>
-        <article class="articlep">
+        <article>
             <h2 class="article_title" id="aside_item1">¿Qué hacemos?</h2>
-            <div class="article_contenido">
-                <p class="article_texto">
-                    La Asociacón de Profesionales ejerce la representación gremial del personal Superior y Profesional
-                    sean de Planta Permanente o Contratados por la Dirección Nacional de Vialidad, bregando por la
-                    defensa de los derechos e intereses de sus afiliados y de su fuente de trabajo.
-                </p>
+            <div class="article_contenido article_texto">
+                La Asociacón de Profesionales ejerce la representación gremial del personal Superior y Profesional
+                sean de Planta Permanente o Contratados por la Dirección Nacional de Vialidad, bregando por la
+                defensa de los derechos e intereses de sus afiliados y de su fuente de trabajo.
             </div>
         </article>
-        <article class="articlep">
+        <article>
             <h2 class="article_title" id="aside_item2">Nuestros objetivos</h2>
             <h2>Son fines de la Asociación, prescindiendo de la ideología política, credo religioso, nacionalidad, raza
                 o sexo:</h4>
                 <div class="article_contenido_grid article_contenido">
-                    <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled" style="color: #747474;"></iconify-icon>
+                    <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled"
+                        style="color: #747474;"></iconify-icon>
                     <div>
-                        <p>Bregar por la plena vigencia de las leyes que regulan la actividad Vial, y la
-                            defensa de los intereses de sus asociados tanto en la faz laboral, como en el
-                            régimen de ascensos por concurso, promociones y designaciones, al igual que
-                            en la asignación de responsabilidades que correspondan a cada función</p>
-
+                        Bregar por la plena vigencia de las leyes que regulan la actividad Vial, y la
+                        defensa de los intereses de sus asociados tanto en la faz laboral, como en el
+                        régimen de ascensos por concurso, promociones y designaciones, al igual que
+                        en la asignación de responsabilidades que correspondan a cada función
                     </div>
-                    <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled" style="color: #747474;"></iconify-icon>
+                    <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled"
+                        style="color: #747474;"></iconify-icon>
                     <div>
                         Representar a sus asociados en las relaciones y conflictos individuales o
                         colectivos que mantengan con la patronal, aún en Sede Judicial Peticionar en
@@ -96,7 +95,8 @@
                         condiciones de vida y demás cuestiones gremiales, previsionales, laborales,
                         sociales, y civiles
                     </div>
-                    <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled" style="color: #747474;"></iconify-icon>
+                    <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled"
+                        style="color: #747474;"></iconify-icon>
                     <div>
                         Defender la dignidad del trabajador, respecto del ejercicio abusivo del ius
                         variandi por parte del empleador,empleador,(ART 66 de la Ley Nacional 20744 “Régimen
@@ -105,26 +105,95 @@
                         separación del cargo sin justa causa, modificación de funciones y/o
                         discriminación en cualquiera de sus formas
                     </div>
-                    <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled" style="color: #747474;"></iconify-icon>
+                    <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled"
+                        style="color: #747474;"></iconify-icon>
                     <div>
                         Participar en negociaciones colectivas y en la modificación de convenios
                         colectivos en las decisiones que modifiquen la Estructura Organizativa de
                         Vialidad Nacional, defender la jerarquización del personal y procurar
                         remuneraciones y condiciones de trabajo dignas, justas y equitativas
                     </div>
-                    <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled" style="color: #747474;"></iconify-icon>
+                    <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled"
+                        style="color: #747474;"></iconify-icon>
                     <div>
-                        
+
                         Propender a la profesionalización de la carrera administrativa y técnica.
                         Auspiciar la capacitación integral del personal.
                     </div>
-                    <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled" style="color: #747474;"></iconify-icon>
+                    <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled"
+                        style="color: #747474;"></iconify-icon>
                     <div>Propiciar el nombramiento del personal contratado</div>
                 </div>
+        </article>
+        <article>
+            <h2 class="article_title" id="aside_item4">¿Cómo funcionamos?</h2>
+            <div class="article-funcion">
+                <div class="box box-1 box-background_primary">
+                    <h3 class="box-title">Comisión Directiva</h3>
+                    <p>Secretario General Secretario General Adjunto e
+                        Interior Secretario de Hacienda y Administración
+                        Secretario Gremial, Legal y Organización
+                        Secretario de Prensa, Propaganda y Capacitación
+                        Secretario de Acción Social --(Vocales
+                        suplentes)</p>
+                </div>
+                <div class="box box-background_terciary">
+                    <h3 class="box-title">Asamblea Fundacional</h3>
+                    <p>Realizada el 08 de septiembre del año 2000</p>
+                </div>
+                <div class="box box-2 box-background_primary">
+                    <h3 class="box-title">Comisión Revisora de Cuentas</h3>
+                    <p>Miembros Titulares y Suplentes.</p>
+                </div>
+                <div class="box box-background_terciary">
+                    <h3 class="box-title">Asambleas Ordinarias y
+                        Extraordinarias</h3>
+                    <p>Realizadas anualmente</p>
+                </div>
+                <div class="box box-3 box-background_primary">
+                    <h3 class="box-title">Seccionales</h3>
+                    <p>Nuevo Centro Nuevo Cuyo Nordeste Noroeste
+                        Patagonia Buenos Aires. Representadas por los
+                        Delegados a Asambleas Ordinaria y Extraordinaria.
+                        Autoridades: Presidente, Secretario y Tesorero.</p>
+                </div>
+                <div class="box box-background_terciary">
+                    <h3 class="box-title">Reuniones de Comisión
+                        Directiva</h3>
+                </div>
+                <div class="box box-4 box-background_primary">
+                    <h3 class="box-title">Distritos</h3>
+                    <p>Delegados Distritales y por piso de Casa Central
+                        (Titular y Suplente).</p>
+                </div>
+                <div class="box box-background_terciary">
+                    <h3 class="box-title">Reuniones semanales abiertas
+                        y nacionales</h3>
+                </div>
+                <div class="box box-5">
+                    <img src="../img/reunion_1.png" alt="Reunión realizada en Sede">
+                </div>
+                
+            </div>
+        </article>
+        <article>
+            <h2 class="article_title" id="aside_item4">Nuestra Sede</h2>
+            <div class="article_sede">
+                <img class="article-img_1" src="../img/sede_2.png" alt="Foto Sede Asociación">
+                <iframe class="article-iframe"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.7565664714143!2d-58.3762116!3d-34.6103167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad3f269f2d7%3A0x462b10bb6166a57b!2sChacabuco%20194%2C%20C1069AAD%20CABA!5e0!3m2!1ses-419!2sar!4v1702946765429!5m2!1ses-419!2sar"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="article_sede">
+                <img class="article-img_2" style="height: 100%;" src="../img/sede_1.png" alt="Foto Sede Asociación">
+                <img class="article-img_3" src="../img/sede_3.png" alt="Foto Sede Asociación">
+            </div>
         </article>
         <aside class="aside_right">
         </aside>
     </section>
+    <script src="../js/menu.js"></script>
     <footer>
         <section class="footer__redes container">
             <ul class="redes__lista">
@@ -161,7 +230,7 @@
     </footer>
     <a href="https://api.whatsapp.com/send/?phone=3512531787" class="wsp_float" target="_blank"><iconify-icon
             icon="logos:whatsapp-icon"></iconify-icon></a>
-    <script src="../js/menu.js"></script>
+
 </body>
 
 </html>
