[FEAT] Readecuación de grid - se agrega nueva sección en Institucional

--- a/pages/institucional.html
+++ b/pages/institucional.html
@@ -39,7 +39,7 @@
             </ul>
         </nav>
     </header>
-    <section class="sinstitucional">
+    <section class="sinstitucional container">
         <!-- <section class="sinstitucional principal container"> -->
         <aside class="aside_left">
             <ul class="aside_menu">
@@ -126,29 +126,20 @@
                 </div>
         </article>
         <article>
-            <h2 class="article_title" id="aside_item4">¿Cómo funcionamos?</h2>
+            <h2 class="article_title" id="aside_item3">¿Cómo funcionamos?</h2>
             <div class="article-funcion">
                 <div class="box box-1 box-background_primary">
                     <h3 class="box-title">Comisión Directiva</h3>
-                    <p>Secretario General Secretario General Adjunto e
-                        Interior Secretario de Hacienda y Administración
-                        Secretario Gremial, Legal y Organización
-                        Secretario de Prensa, Propaganda y Capacitación
-                        Secretario de Acción Social --(Vocales
+                    <p>Secretario General<br>Secretario General Adjunto e
+                        Interior<br>Secretario de Hacienda y Administración<br>
+                        Secretario Gremial, Legal y Organización<br>
+                        Secretario de Prensa, Propaganda y Capacitación<br>
+                        Secretario de Acción Social<br> (Vocales
                         suplentes)</p>
-                </div>
-                <div class="box box-background_terciary">
-                    <h3 class="box-title">Asamblea Fundacional</h3>
-                    <p>Realizada el 08 de septiembre del año 2000</p>
                 </div>
                 <div class="box box-2 box-background_primary">
                     <h3 class="box-title">Comisión Revisora de Cuentas</h3>
                     <p>Miembros Titulares y Suplentes.</p>
-                </div>
-                <div class="box box-background_terciary">
-                    <h3 class="box-title">Asambleas Ordinarias y
-                        Extraordinarias</h3>
-                    <p>Realizadas anualmente</p>
                 </div>
                 <div class="box box-3 box-background_primary">
                     <h3 class="box-title">Seccionales</h3>
@@ -157,21 +148,33 @@
                         Delegados a Asambleas Ordinaria y Extraordinaria.
                         Autoridades: Presidente, Secretario y Tesorero.</p>
                 </div>
-                <div class="box box-background_terciary">
-                    <h3 class="box-title">Reuniones de Comisión
-                        Directiva</h3>
-                </div>
                 <div class="box box-4 box-background_primary">
                     <h3 class="box-title">Distritos</h3>
                     <p>Delegados Distritales y por piso de Casa Central
                         (Titular y Suplente).</p>
                 </div>
-                <div class="box box-background_terciary">
+                <div class="box box-5 box-background_terciary">
+                    <h3 class="box-title">Asamblea Fundacional</h3>
+                    <p>Realizada el 08 de septiembre del año 2000</p>
+                </div>
+
+                <div class="box box-6 box-background_terciary">
+                    <h3 class="box-title">Asambleas Ordinarias y
+                        Extraordinarias</h3>
+                    <p>Realizadas anualmente</p>
+                </div>
+
+                <div class="box box-7 box-background_terciary">
+                    <h3 class="box-title">Reuniones de Comisión
+                        Directiva</h3>
+                </div>
+
+                <div class="box box-8 box-background_terciary">
                     <h3 class="box-title">Reuniones semanales abiertas
                         y nacionales</h3>
                 </div>
-                <div class="box box-5">
-                    <img src="../img/reunion_1.png" alt="Reunión realizada en Sede">
+                <div class="box box-9">
+                    <img class="box-img" src="../img/reunion_1.png" alt="Reunión realizada en Sede">
                 </div>
                 
             </div>
@@ -190,8 +193,8 @@
                 <img class="article-img_3" src="../img/sede_3.png" alt="Foto Sede Asociación">
             </div>
         </article>
-        <aside class="aside_right">
-        </aside>
+        <!-- <aside class="aside_right">
+        </aside> -->
     </section>
     <script src="../js/menu.js"></script>
     <footer>
