--- a/pages/institucional.html
+++ b/pages/institucional.html
@@ -236,6 +236,24 @@
                     de los delegados</p>
             </div>
         </article>
+        <article>
+            <h2 class="article_title" id="aside_item6">¿Quién puede afiliarse?</h2>
+            <div class="box box-background_primary">
+                Cualquier profesional de título
+                terciario o universitario profesional
+                o técnico que haya ejercido cualquier
+                cargo de estructura de la DNV
+                (Encargados de área hasta
+                Gerentes), cualquiera sea su forma
+                de relación laboral
+            </div>
+        </article>
+        <article>
+            <h2 class="article_title" id="aside_item7">Derechos de nuestros afiliados</h2>
+            <div class="box box-background_secondary article-box7">
+                
+            </div>
+        </article>
         <!-- <aside class="aside_right">
         </aside> -->
     </section>
