[FEAT] rearmado de grid responsivo en Institucional

--- a/pages/institucional.html
+++ b/pages/institucional.html
@@ -80,7 +80,7 @@
                 <div class="article_contenido_grid article_contenido">
                     <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled"
                         style="color: #747474;"></iconify-icon>
-                    <div>
+                    <div class="article-parrafos">
                         Bregar por la plena vigencia de las leyes que regulan la actividad Vial, y la
                         defensa de los intereses de sus asociados tanto en la faz laboral, como en el
                         régimen de ascensos por concurso, promociones y designaciones, al igual que
@@ -88,7 +88,7 @@
                     </div>
                     <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled"
                         style="color: #747474;"></iconify-icon>
-                    <div>
+                    <div class="article-parrafos">
                         Representar a sus asociados en las relaciones y conflictos individuales o
                         colectivos que mantengan con la patronal, aún en Sede Judicial Peticionar en
                         su nombre, en todo en lo relacionado al mantenimiento de la fuente de trabajo,
@@ -97,7 +97,7 @@
                     </div>
                     <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled"
                         style="color: #747474;"></iconify-icon>
-                    <div>
+                    <div class="article-parrafos">
                         Defender la dignidad del trabajador, respecto del ejercicio abusivo del ius
                         variandi por parte del empleador,empleador,(ART 66 de la Ley Nacional 20744 “Régimen
                         de Contrato de Trabajo”), como así de toda medida compulsiva o arbitraria que
@@ -107,7 +107,7 @@
                     </div>
                     <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled"
                         style="color: #747474;"></iconify-icon>
-                    <div>
+                    <div class="article-parrafos">
                         Participar en negociaciones colectivas y en la modificación de convenios
                         colectivos en las decisiones que modifiquen la Estructura Organizativa de
                         Vialidad Nacional, defender la jerarquización del personal y procurar
@@ -115,14 +115,14 @@
                     </div>
                     <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled"
                         style="color: #747474;"></iconify-icon>
-                    <div>
+                    <div class="article-parrafos">
 
                         Propender a la profesionalización de la carrera administrativa y técnica.
                         Auspiciar la capacitación integral del personal.
                     </div>
                     <iconify-icon class="icono_objetivo" icon="tdesign:check-circle-filled"
                         style="color: #747474;"></iconify-icon>
-                    <div>Propiciar el nombramiento del personal contratado</div>
+                    <div class="article-parrafos">Propiciar el nombramiento del personal contratado</div>
                 </div>
         </article>
         <article>
@@ -183,10 +183,7 @@
             <h2 class="article_title" id="aside_item4">Nuestra Sede</h2>
             <div class="article_sede">
                 <img class="article-img_1" src="../img/sede_2.png" alt="Foto Sede Asociación">
-                <iframe class="article-iframe"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.7565664714143!2d-58.3762116!3d-34.6103167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad3f269f2d7%3A0x462b10bb6166a57b!2sChacabuco%20194%2C%20C1069AAD%20CABA!5e0!3m2!1ses-419!2sar!4v1702946765429!5m2!1ses-419!2sar"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="article-iframe_mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6567.513109211398!2d-58.376212!3d-34.610317!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad3f269f2d7%3A0x462b10bb6166a57b!2sChacabuco%20194%2C%20C1069AAD%20CABA!5e0!3m2!1ses-419!2sar!4v1703083213128!5m2!1ses-419!2sar" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="article_sede">
                 <img class="article-img_2" style="height: 100%;" src="../img/sede_1.png" alt="Foto Sede Asociación">
