[FEAT]Agregando JS al Header

--- a/pages/institucional.html
+++ b/pages/institucional.html
@@ -255,6 +255,7 @@
         </aside> -->
     </section>
     <script src="../js/menu.js"></script>
+    <script src="../js/scroll.js"></script>
     <footer>
         <section class="footer__redes container">
             <ul class="redes__lista">
