[FEAT]Derechos de afiliados en Institucional

--- a/pages/institucional.html
+++ b/pages/institucional.html
@@ -183,7 +183,10 @@
             <h2 class="article_title" id="aside_item4">Nuestra Sede</h2>
             <div class="article_sede">
                 <img class="article-img_1" src="../img/sede_2.png" alt="Foto Sede Asociación">
-                <iframe class="article-iframe_mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6567.513109211398!2d-58.376212!3d-34.610317!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad3f269f2d7%3A0x462b10bb6166a57b!2sChacabuco%20194%2C%20C1069AAD%20CABA!5e0!3m2!1ses-419!2sar!4v1703083213128!5m2!1ses-419!2sar" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="article-iframe_mapa"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6567.513109211398!2d-58.376212!3d-34.610317!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad3f269f2d7%3A0x462b10bb6166a57b!2sChacabuco%20194%2C%20C1069AAD%20CABA!5e0!3m2!1ses-419!2sar!4v1703083213128!5m2!1ses-419!2sar"
+                    width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="article_sede">
                 <img class="article-img_2" style="height: 100%;" src="../img/sede_1.png" alt="Foto Sede Asociación">
@@ -248,7 +251,45 @@
         <article>
             <h2 class="article_title" id="aside_item7">Derechos de nuestros afiliados</h2>
             <div class="box box-background_secondary article-box7">
-                
+                <div class="article_derechos">Ser elegidos para
+                    representar a los
+                    afiliados de la
+                    Asociación</div>
+                <div class="article_derechos">Elegir a sus
+                    representantes a
+                    través del voto</div>
+                <div class="article_derechos">Participar de todos los
+                    beneficios gremiales y
+                    sociales que obtenga
+                    o acuerde la
+                    Asociación</div>
+                <div class="article_derechos">Desempeñar cualquier
+                    cargo Directivo o
+                    Representativo,
+                    reuniendo las
+                    condiciones
+                    establecidas en el
+                    Estatuto</div>
+                <div class="article_derechos">Requerir la
+                    intervención de las
+                    Autoridades de la
+                    Asociación en defensa
+                    de los derechos que le
+                    corresponda y
+                    considere vulnerados</div>
+                <div class="article_derechos">Presentar, ante las
+                    autoridades de la
+                    Asociación, cualquier
+                    iniciativa tendiente a
+                    perfeccionar los fines
+                    de la misma o los
+                    medios para lograrlos</div>
+                <!-- <div class="glide__arrows" data-glide-el="controls">
+                    <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><iconify-icon
+                            icon="ic:round-chevron-left" class="chevron__carousel"></iconify-icon></button>
+                    <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><iconify-icon
+                            icon="ic:round-chevron-right" class="chevron__carousel"></iconify-icon></button>
+                </div> -->
             </div>
         </article>
         <!-- <aside class="aside_right">
@@ -256,6 +297,7 @@
     </section>
     <script src="../js/menu.js"></script>
     <script src="../js/scroll.js"></script>
+    <script src="../js/glide.js"></script>
     <footer>
         <section class="footer__redes container">
             <ul class="redes__lista">
