[FEAT] Inicio de Beneficios

--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="shortcut icon" href="../img/logoasociacion.ico" type="image/x-icon">
     <title>Home</title>
 </head>
+
 <body>
     <header>
         <div class="header__box">
@@ -17,35 +19,46 @@
             <div class="toggle">
                 <iconify-icon class="navbar__toggle" icon="fa6-solid:bars" style="color: white;"></iconify-icon>
             </div>
-        </div>       
-        <nav class="navbar container">          
+        </div>
+        <nav class="navbar container">
             <ul class="navbar__menu">
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="./home.html">Inicio</a>
+                <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Inicio</a>
                 </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="./noticias.html">Noticias</a>
+                <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Noticias</a>
                 </li>
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="./institucional.html">Institucional</a>
                 </li>
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="./beneficios.html">Beneficios</a>
                 </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="./capacitacion.html">Capacitación</a>
+                <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Capacitación</a>
                 </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="./contacto">Contacto</a>
+                <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Contacto</a>
                 </li>
-                <li class="navbar__item submenuopen destacado"><a class="navbar__link" href="./afiliate">Afiliate</a>
-                </li>  
+                <li class="navbar__item submenuopen destacado"><a class="navbar__link" href="#">Afiliate</a>
+                </li>
             </ul>
         </nav>
     </header>
-    <script src="../js/menu.js"></script>
-    <section class="principal">
+    <section class="sbeneficios">
+        <article class="banner">
+            <div class="banner__1">
+                <img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt="">
+            </div>
+        </article>
     </section>
+    <script src="../js/menu.js"></script>
+    <script src="../js/scroll.js"></script>
     <footer>
         <section class="footer__redes container">
             <ul class="redes__lista">
-                <li class="redes__item"><a href="https://instagram.com/profesionalesdnv?igshid=OGQ5ZDc2ODk2ZA==" class="redes__link" target="_blank"><iconify-icon icon="skill-icons:instagram"></iconify-icon></a></li>
-                <li class="redes__item"><a href="https://api.whatsapp.com/send/?phone=3512531787" class="redes__link" target="_blank"><iconify-icon icon="logos:whatsapp-icon"></iconify-icon></a></li>
-                <li class="redes__item"><a href="mailto:info@profesionalesdnv.org.ar" class="redes__link" title="info@profesionalesdnv.org.ar"><iconify-icon icon="clarity:email-solid" style="color: #f86900;"></iconify-icon></a></li>
+                <li class="redes__item"><a href="https://instagram.com/profesionalesdnv?igshid=OGQ5ZDc2ODk2ZA=="
+                        class="redes__link" target="_blank"><iconify-icon
+                            icon="skill-icons:instagram"></iconify-icon></a></li>
+                <li class="redes__item"><a href="https://api.whatsapp.com/send/?phone=3512531787" class="redes__link"
+                        target="_blank"><iconify-icon icon="logos:whatsapp-icon"></iconify-icon></a></li>
+                <li class="redes__item"><a href="mailto:info@profesionalesdnv.org.ar" class="redes__link"
+                        title="info@profesionalesdnv.org.ar"><iconify-icon icon="clarity:email-solid"
+                            style="color: #f86900;"></iconify-icon></a></li>
             </ul>
         </section>
         <section class="footer__info container">
@@ -65,9 +78,11 @@
             </ul>
         </section>
         <p class="footer__line container"></p>
-        <p class="footer__info container">Chacabuco 194 - 2° Piso A - C.A.B.A. - <iconify-icon icon="mingcute:phone-fill"></iconify-icon> 011 - 43343779</p>
+        <p class="footer__info container">Chacabuco 194 - 2° Piso A - C.A.B.A. - <iconify-icon
+                icon="mingcute:phone-fill"></iconify-icon> 011 - 43343779</p>
         <p class="footer__info container">Todos los derechos reservados &copy; Profesionales DNV 2023 </p>
     </footer>
-    <a href="https://api.whatsapp.com/send/?phone=3512531787" class="wsp_float" target="_blank"><iconify-icon icon="logos:whatsapp-icon"></iconify-icon></a>
+    <a href="https://api.whatsapp.com/send/?phone=3512531787" class="wsp_float" target="_blank"><iconify-icon
+            icon="logos:whatsapp-icon"></iconify-icon></a>
 </body>
 </html>
