--- a/pages/institucional.html
+++ b/pages/institucional.html
@@ -26,9 +26,9 @@
                 </li>
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Noticias</a>
                 </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Institucional</a>
+                <li class="navbar__item submenuopen"><a class="navbar__link" href="./institucional.html">Institucional</a>
                 </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Beneficios</a>
+                <li class="navbar__item submenuopen"><a class="navbar__link" href="./beneficios.html">Beneficios</a>
                 </li>
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Capacitación</a>
                 </li>
