--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/index.css">
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <link rel="shortcut icon" href="../img/logoasociacion.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
+    <link rel="stylesheet" href="../css/index.css">
     <title>Home</title>
 </head>
 
@@ -39,15 +41,23 @@
             </ul>
         </nav>
     </header>
-    <section class="sbeneficios">
-        <article class="banner">
-            <div class="banner__1">
-                <img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt="">
-            </div>
-        </article>
+    <section class="sbeneficios glide">
+        <div class="banner glide__track" data-glide-el="track">
+            <ul class="glide__slides">
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida-removebg-preview.png" alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt=""></li>
+            </ul>        
+        </div>
+        <div class="glide__arrows" data-glide-el="controls">
+            <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><iconify-icon class="iconify_chevron" icon="ic:round-chevron-left"></iconify-icon></button>
+            <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><iconify-icon class="iconify_chevron" icon="ic:round-chevron-right"></iconify-icon></button>
+          </div>
     </section>
-    <script src="../js/menu.js"></script>
-    <script src="../js/scroll.js"></script>
     <footer>
         <section class="footer__redes container">
             <ul class="redes__lista">
@@ -84,5 +94,9 @@
     </footer>
     <a href="https://api.whatsapp.com/send/?phone=3512531787" class="wsp_float" target="_blank"><iconify-icon
             icon="logos:whatsapp-icon"></iconify-icon></a>
+            <script src="../js/menu.js"></script>
+            <script src="../js/scroll.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script> 
+            <script src="../js/glide.js"></script>
 </body>
 </html>
