--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -28,7 +28,8 @@
                 </li>
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Noticias</a>
                 </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="./institucional.html">Institucional</a>
+                <li class="navbar__item submenuopen"><a class="navbar__link"
+                        href="./institucional.html">Institucional</a>
                 </li>
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="./beneficios.html">Beneficios</a>
                 </li>
@@ -44,19 +45,34 @@
     <section class="sbeneficios glide">
         <div class="banner glide__track" data-glide-el="track">
             <ul class="glide__slides">
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida-removebg-preview.png" alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png" alt=""></li>
-            </ul>        
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png"
+                        alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img"
+                        src="../img/Regalo_de_bienvenida-removebg-preview.png" alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png"
+                        alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png"
+                        alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png"
+                        alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png"
+                        alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png"
+                        alt=""></li>
+            </ul>
         </div>
         <div class="glide__arrows" data-glide-el="controls">
-            <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><iconify-icon class="iconify_chevron" icon="ic:round-chevron-left"></iconify-icon></button>
-            <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><iconify-icon class="iconify_chevron" icon="ic:round-chevron-right"></iconify-icon></button>
-          </div>
+            <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><iconify-icon class="iconify_chevron"
+                    icon="ic:round-chevron-left"></iconify-icon></button>
+            <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><iconify-icon class="iconify_chevron"
+                    icon="ic:round-chevron-right"></iconify-icon></button>
+        </div>
+
+        <div class="glide__bullets" data-glide-el="controls[nav]">
+            <button class="glide__bullet" data-glide-dir="=0"></button>
+            <button class="glide__bullet" data-glide-dir="=1"></button>
+            <button class="glide__bullet" data-glide-dir="=2"></button>
+        </div>
     </section>
     <footer>
         <section class="footer__redes container">
@@ -94,9 +110,10 @@
     </footer>
     <a href="https://api.whatsapp.com/send/?phone=3512531787" class="wsp_float" target="_blank"><iconify-icon
             icon="logos:whatsapp-icon"></iconify-icon></a>
-            <script src="../js/menu.js"></script>
-            <script src="../js/scroll.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script> 
-            <script src="../js/glide.js"></script>
+    <script src="../js/menu.js"></script>
+    <script src="../js/scroll.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+    <script src="../js/glide.js"></script>
 </body>
+
 </html>
