[FEAT]Iniciando home

--- a/pages/home.html
+++ b/pages/home.html
@@ -37,8 +37,11 @@
             </ul>
         </nav>
     </header>
-    <script src="../js/menu.js"></script>
-    <section class="principal">
+    <section class="img_principal">
+        <p>oisahdoiasdjhoaisjd</p>
+    </section>
+    <section class="home">
+        
     </section>
     <footer>
         <section class="footer__redes container">
@@ -69,5 +72,8 @@
         <p class="footer__info container">Todos los derechos reservados &copy; Profesionales DNV 2023 </p>
     </footer>
     <a href="https://api.whatsapp.com/send/?phone=3512531787" class="wsp_float" target="_blank"><iconify-icon icon="logos:whatsapp-icon"></iconify-icon></a>
+    <script src="../js/menu.js"></script>
+    <script src="../js/scroll.js"></script>
+    <script src="../js/glide.js"></script>
 </body>
 </html>
